--- a/index.html
+++ b/index.html
@@ -23,10 +23,12 @@
   </head>
   <body>
     <div class="container">
-      <div class="card">
-        <div class="QR">
-          <img src="images/image-qr-code.png" alt="Image of a QR Code" />
-        </div>
+      <section class="card">
+        <img
+          class="qr"
+          src="images/image-qr-code.png"
+          alt="Image of a QR Code"
+        />
         <div class="text">
           <h3 class="title">
             Improve your front-end skills by building projects
@@ -36,14 +38,15 @@
             skills to the next level
           </p>
         </div>
-      </div>
+      </section>
     </div>
-
-    <!-- <div class="attribution">
-      Challenge by
-      <a href="https://www.frontendmentor.io?ref=challenge" target="_blank"
-        >Frontend Mentor</a
-      >. Coded by <a href="#">Your Name Here</a>.
-    </div> -->
+    <footer>
+      <div class="attribution">
+        Challenge by
+        <a href="https://www.frontendmentor.io?ref=challenge" target="_blank"
+          >Frontend Mentor</a
+        >. Coded by <a href="https://github.com/mci3x">mci3x</a>.
+      </div>
+    </footer>
   </body>
 </html>
