Add meta description, fix colors based on feedback

--- a/index.html
+++ b/index.html
@@ -4,6 +4,10 @@
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <!-- displays site properly based on user's device -->
+    <meta
+      name="description"
+      content="Frontend Mentor Solution of QR code component challenge"
+    />
     <link rel="preconnect" href="https://fonts.googleapis.com" />
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
     <link
@@ -22,7 +26,7 @@
     <title>Frontend Mentor | QR code component</title>
   </head>
   <body>
-    <div class="container">
+    <div class="container" role="main">
       <section class="card">
         <img
           class="qr"
